# pydracor

./: LICENSE.txt  README.md  dracor.py  pyproject.toml  setup.py  test.py  test_api_wrapper.py  tests.py
.github/workflows/: ci.yml
notebooks/: classes_and_objects.ipynb  function-ideas.ipynb
openapi-generated-wrapper/: api_wrapper.py  openapi-docker.sh  requirements.txt
openapi-generated-wrapper/auto-generated/: README.md  pyproject.toml  setup.py
openapi-generated-wrapper/auto-generated/.openapi-generator/: FILES
openapi-generated-wrapper/auto-generated/docs/: AdminApi.md  AuthorInPlayInCorpus.md  AuthorInPlayMetadata.md  Character.md  CharacterInPlayMetadata.md  Corpus.md  CorpusInCorpora.md  CorpusMetrics.md  ExternalReferenceResourceId.md  Info.md  LoadCorpusRequest.md  NodeInPlayMetrics.md  Play.md  PlayInCorpus.md  PlayMetadata.md  PlayMetrics.md  PlayWithWikidataCharacter.md  PostCorporaRequest.md  PublicApi.md  RelationItemInPlayMetadata.md  SegmentItemInPlayMetadata.md  SourceInPlayMetadata.md  SpokenTextByCharacter.md  WebhookApi.md  WikidataApi.md  WikidataAuthorInfo404Response.md  WordCounts.md
openapi-generated-wrapper/auto-generated/openapi_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
openapi-generated-wrapper/auto-generated/openapi_client/api/: __init__.py  admin_api.py  public_api.py  webhook_api.py  wikidata_api.py
openapi-generated-wrapper/auto-generated/openapi_client/models/: __init__.py  author_in_play_in_corpus.py  author_in_play_metadata.py  character.py  character_in_play_metadata.py  corpus.py  corpus_in_corpora.py  corpus_metrics.py  external_reference_resource_id.py  info.py  load_corpus_request.py  node_in_play_metrics.py  play.py  play_in_corpus.py  play_metadata.py  play_metrics.py  play_with_wikidata_character.py  post_corpora_request.py  relation_item_in_play_metadata.py  segment_item_in_play_metadata.py  source_in_play_metadata.py  spoken_text_by_character.py  wikidata_author_info404_response.py  word_counts.py
openapi-generated-wrapper/auto-generated/test/: test_admin_api.py  test_author_in_play_in_corpus.py  test_author_in_play_metadata.py  test_character.py  test_character_in_play_metadata.py  test_corpus.py  test_corpus_in_corpora.py  test_corpus_metrics.py  test_external_reference_resource_id.py  test_info.py  test_load_corpus_request.py  test_node_in_play_metrics.py  test_play.py  test_play_in_corpus.py  test_play_metadata.py  test_play_metrics.py  test_play_with_wikidata_character.py  test_post_corpora_request.py  test_public_api.py  test_relation_item_in_play_metadata.py  test_segment_item_in_play_metadata.py  test_source_in_play_metadata.py  test_spoken_text_by_character.py  test_webhook_api.py  test_wikidata_api.py  test_wikidata_author_info404_response.py  test_word_counts.py
pydracor/: __init__.py  dracor.py  test_dracor.py
pydracor/test_artifacts/: mixnmatch.csv  play_info_by_id.html
src/pydracor/: __init__.py  api_wrapper.py
test/: compose.dracor_api.dev.yml  test_api_wrapper.py
tests/: test_character.py  test_corpus.py  test_dracor.py  test_play.py  test_wikidata.py
tests/test_artifacts/: mixnmatch.csv  play_info_by_id.html
