[project]
name = "pydracor"
version = "2.0.0"
description = "Python package which provides access to the DraCor API."
readme = "README.md"
keywords = [
  "api",
  "corpus",
  "dracor",
  "drama",
  "drama corpus",
  "pydracor",
  "wrapper",
]
license = "MIT"
authors = [
  { name = "Eduard Grigoriev", email = "happypuffin7@gmail.com" },
  { name = "Henny Sluyter-Gäthje", email = "sluytergaeth@uni-potsdam.de" },
]
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Education",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "requests>=2.28.2",
]
[project.optional-dependencies]
test = [
  "pytest~=7.4",
  "pytest-cov~=4.1",
]
[project.urls]
Repository = "https://github.com/dracor-org/pydracor.git"

[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling"]

[tool.hatch.build.targets.sdist]
include = ["pydracor"]

[tool.hatch.build.targets.wheel]
include = ["pydracor"]
